--- a/mainWebsite/style/messages.css
+++ b/mainWebsite/style/messages.css
@@ -78,3 +78,9 @@ td {
 ::-webkit-scrollbar-thumb:hover {
     background: #999;
 }
+
+.single-msg {
+    margin: 0;
+    padding: 0;
+    border-bottom: 1px solid black;
+}
